[package]
name = "acrylic"
version = "0.1.8"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "cross-platform, small, web-inspired user interface toolkit"
license = "MIT"
keywords = ["toolkit", "gui", "ui", "xml"]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "README.md"

[dependencies]
ab_glyph = { version = "0.2", optional = true }
xmlparser = { version = "0.13.3", optional = true }
png = { version = "0.17", optional = true }
bitflags = "1.3"

[features]
default = [ "text", "xml", "png" ]
text = [ "ab_glyph" ]
xml = [ "xmlparser" ]

[[example]]
name = "demo"
