[package]
name = "acrylic"
version = "0.1.16"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "cross-platform, small, web-inspired user interface toolkit"
license = "MIT"
categories = [ "gui" ]
keywords = [ "toolkit", "gui", "ui", "xml" ]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "README.md"

[dependencies]
ab_glyph = { version = "0.2", optional = true }
xmlparser = { version = "0.13.3", optional = true }
png = { version = "0.17", optional = true }
railway = { version = "0.1.3", features = [ "zeno" ], optional = true }
bitflags = "1.3"

[features]
default = [ "text", "xml", "png", "railway", "noto-default-font" ]
text = [ "ab_glyph" ]
xml = [ "xmlparser" ]
noto-default-font = []
