[package]
name = "acrylic-png"
version = "0.1.26"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "acrylic apps as webapps"
license = "MIT"
keywords = [ "acrylic", "platform" ]
categories = [ "web-programming" ]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "../README.md"

[dependencies]
acrylic = { version = "0.1.26", path = "../acrylic" }
png = "0.17"
