[package]
name = "acrylic-png"
version = "0.1.29"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "debug acrylic apps by rendering to a PNG image"
license = "MIT"
keywords = [ "acrylic", "debugging" ]
categories = [ "debugging" ]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "../README.md"

[dependencies]
acrylic = { version = "0.1.29", path = "../acrylic" }
png = "0.17"
