[package]
name = "acrylic-wayland"
version = "0.2.1"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "compile acrylic apps for wayland environments"
license = "MIT"
keywords = [ "acrylic", "platform" ]
categories = [ "rendering::graphics-api", "gui" ]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "../README.md"

[dependencies]
wayland-client = "0.29.4"
wayland-protocols = { version = "0.29.4", features = [ "client" ] }
tempfile = "3.3.0"
memmap = "0.7.0"
acrylic = { version = "0.2.1", path = "../acrylic" }
