[package]
name = "acrylic-wayland"
version = "0.3.4"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "compile acrylic apps for wayland environments"
license = "MIT"
keywords = [ "acrylic", "platform" ]
categories = [ "rendering::graphics-api", "gui" ]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "../README.md"

[dependencies]
wayland-client = "0.30.1"
simple_logger = "4.0.0"
wayland-protocols = { version = "0.30.0", features = [ "client" ] }
tempfile = "3.3.0"
memmap = "0.7.0"
acrylic = { version = "0.3.4", path = "../acrylic" }
