[package]
name = "acrylic-web"
version = "0.3.2"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "acrylic apps as webapps"
license = "MIT"
keywords = [ "acrylic", "platform" ]
categories = [ "web-programming" ]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "../README.md"

[dependencies]
acrylic = { version = "0.3.2", path = "../acrylic" }
log = "0.4.17"
