[package]
name = "acrylic-web"
version = "0.3.4"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "compile acrylic apps to web-assembly"
license = "MIT"
keywords = [ "acrylic", "platform" ]
categories = [ "rendering::graphics-api", "gui", "web-programming" ]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "../README.md"

[dependencies]
acrylic = { version = "0.3.4", path = "../acrylic" }
log = "0.4.17"
