[package]
name = "acrylic"
version = "0.3.3"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "ultra-portable, web-inspired UI toolkit with SIMD graphics"
license = "MIT"
categories = [ "gui", "rendering", "graphics", "multimedia", "no-std" ]
keywords = [ "toolkit", "gui", "ui", "xml", "no_std" ]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "../README.md"

[lib]
path = "lib.rs"

[dependencies]
static_assertions = "1.1.0"
ttf-parser = "0.18.1"
xmlparser = "0.13.5"
lmfu = { path = "../../bsutils" }
tinyvec = "1.6.0"
oakwood = { path = "../../oakwood" }
railway = { path = "../../railway" }
wizdraw = { path = "../../wizdraw" }
fixed = "1.23.0"
log = "0.4.17"
rgb = "0.8.36"
png = "0.17"
simd-blit = { path = "../../simd-blit" }

vek = { version = "0.15.8", default-features = false }

[features]
default = [ "ssaa-x3", "simd-gfx" ]
simd-gfx = [ "simd-blit/simd", "wizdraw/simd", "railway/simd" ]
ssaa-x2 = []
ssaa-x3 = []
ssaa-x4 = []

[build-dependencies]
railway = { path = "../../railway" }
