[package]
name = "acrylic"
version = "0.3.5"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "ultra-portable, web-inspired UI toolkit with SIMD graphics"
license = "MIT"
categories = [ "gui", "rendering", "graphics", "multimedia", "no-std" ]
keywords = [ "toolkit", "gui", "ui", "no_std", "simd" ]
repository = "https://github.com/NathanRoyer/acrylic"
readme = "../README.md"

[lib]
path = "lib.rs"

[dependencies]
static_assertions = "1.1.0"
ttf-parser = { version = "0.18.1", default-features = false, features = [ "opentype-layout", "apple-layout", "variable-fonts", "glyph-names" ] }
xmlparser = { version = "0.13.5", default-features = false }
tinyvec = "1.6.0"
oakwood = "0.1.4"
railway = "0.3.3"
wizdraw = "1.2.1"
fixed = "1.23.0"
lmfu = "1.2.2"
log = "0.4.17"
rgb = "0.8.36"
zune-png = { version = "0.2.1", default-features = false }
simd-blit = "1.0.1"

vek = { version = "0.15.8", default-features = false }

[features]
default = [ "ssaa-x3", "text-ssaa-x6", "simd-gfx" ]
simd-gfx = [ "simd-blit/simd", "wizdraw/simd", "railway/simd" ]
ssaa-x2 = []
ssaa-x3 = []
ssaa-x4 = []
text-ssaa-x2 = []
text-ssaa-x4 = []
text-ssaa-x6 = []

[build-dependencies]
railway = "0.3.3"
